--- a/opencv-gui/gui/makefile
+++ b/opencv-gui/gui/makefile
@@ -2,7 +2,8 @@
 
 SRCS = main_window.ui common_ui.ui\
        input_ui.ui \
-       Canny_ui.ui cvtColor_ui.ui
+       canny_ui.ui cvt_color_ui.ui threshold_ui.ui\
+			 find_contours_ui.ui draw_contours_ui.ui
 OBJS = ${SRCS:.ui=.py}
 
 .SUFFIXES:
