implement recognize number by k-mean (closes #8)

--- a/opencv-gui/gui/makefile
+++ b/opencv-gui/gui/makefile
@@ -3,7 +3,8 @@
 SRCS = main_window.ui common_ui.ui\
        input_ui.ui \
        canny_ui.ui cvt_color_ui.ui threshold_ui.ui\
-			 find_contours_ui.ui draw_contours_ui.ui
+			 find_contours_ui.ui draw_contours_ui.ui\
+			 knn_number_ui.ui
 OBJS = ${SRCS:.ui=.py}
 
 .SUFFIXES:
