--- a/opencv-gui/gui/makefile
+++ b/opencv-gui/gui/makefile
@@ -1,9 +1,10 @@
 
 
-SRCS = main_window.ui common_ui.ui\
+SRCS = main_window.ui common_ui.ui \
        input_ui.ui \
-       canny_ui.ui cvt_color_ui.ui threshold_ui.ui\
-			 find_contours_ui.ui draw_contours_ui.ui\
+       canny_ui.ui cvt_color_ui.ui \
+			 threshold_ui.ui adaptive_threshold_ui.ui \
+			 find_contours_ui.ui draw_contours_ui.ui \
 			 knn_number_ui.ui pyocr_ui.ui
 
 OBJS = ${SRCS:.ui=.py}
